--- a/QuanLyHocSinh/templates/Teacher/EnterPoints.html
+++ b/QuanLyHocSinh/templates/Teacher/EnterPoints.html
@@ -33,10 +33,9 @@ Nhập điểm
                            placeholder="Nhập lớp (vd: 10A1)"
                            list="class-list" autocomplete="off">
                     <datalist id="class-list">
-                        <option value="10A">
-                        <option value="10B">
-                        <option value="10C">
-                        <option value="12A">
+                        {%for class  in class_name%}
+                        <option value="{{class}}"></option>
+                        {%endfor%}
                     </datalist>
                 </p>
 
@@ -48,8 +47,9 @@ Nhập điểm
 
                            list="semester-list" autocomplete="off">
                     <datalist id="semester-list">
-                        <option value="Học kỳ 1"></option>
-                        <option value="Học kỳ 2"></option>
+                        {% for semester in unique_semesters %}
+                            <option value="{{ semester }}"></option>
+                        {% endfor %}
                     </datalist>
                 </p>
 
@@ -59,8 +59,9 @@ Nhập điểm
                     <input type="text" id="academic-year-input" name="academic-year-input" class="input-field"
                            placeholder="Nhập năm học (vd: 2024-2025)" list="academic-year-list" autocomplete="off">
                     <datalist id="academic-year-list">
-                        <option value="2022-2023">
-                        <option value="2023-2024">
+                        {% for year in unique_years %}
+                            <option value="{{ year }}"></option>
+                        {% endfor %}
                     </datalist>
                 </p>
                 <button id="class_filter" type="submit">Lọc</button>
