--- a/QuanLyHocSinh/templates/Teacher/GenerateTranscript.html
+++ b/QuanLyHocSinh/templates/Teacher/GenerateTranscript.html
@@ -33,12 +33,11 @@ Xuất điểm
                     <strong>Lớp:</strong>
                     <input type="text" id="class-input" name="class-input" class="input-field"
                            placeholder="Nhập lớp (vd: 10A1)"
-                           list="class-list" required>
+                           list="class-list" autocomplete="off">
                     <datalist id="class-list">
-                        <option value="10A">
-                        <option value="10B">
-                        <option value="10C">
-                        <option value="12A">
+                        {%for class  in class_name%}
+                        <option value="{{class}}"></option>
+                        {%endfor%}
                     </datalist>
                 </p>
 
@@ -47,10 +46,12 @@ Xuất điểm
                     <strong>Học kỳ:</strong>
                     <input type="text" id="semester-input" name="semester-input" class="input-field"
                            placeholder="Nhập học kỳ (vd: 1, 2)"
-                           list="semester-list" required>
+
+                           list="semester-list" autocomplete="off">
                     <datalist id="semester-list">
-                        <option value="Học kỳ 1"></option>
-                        <option value="Học kỳ 2"></option>
+                        {% for semester in unique_semesters %}
+                            <option value="{{ semester }}"></option>
+                        {% endfor %}
                     </datalist>
                 </p>
 
@@ -58,10 +59,11 @@ Xuất điểm
                 <p>
                     <strong>Năm học:</strong>
                     <input type="text" id="academic-year-input" name="academic-year-input" class="input-field"
-                           placeholder="Nhập năm học (vd: 2024-2025)" list="academic-year-list" required>
+                           placeholder="Nhập năm học (vd: 2024-2025)" list="academic-year-list" autocomplete="off">
                     <datalist id="academic-year-list">
-                        <option value="2022-2023">
-                        <option value="2023-2024">
+                        {% for year in unique_years %}
+                            <option value="{{ year }}"></option>
+                        {% endfor %}
                     </datalist>
                 </p>
                 <button id="generate" type="submit" class="btn btn-primary">Lọc</button>
