--- a/QuanLyHocSinh/templates/Administrator/TeacherManagement.html
+++ b/QuanLyHocSinh/templates/Administrator/TeacherManagement.html
@@ -37,7 +37,7 @@ Quản lý giáo viên
                     <th>Email</th>
                     <th>Số điện thoại</th>
                     <th>Ngày sinh</th>
-                    <th>Kinh nghiệm</th>
+                    <th>Năm kinh nghiệm</th>
                     <th>Chuyên môn</th>
                 </tr>
                 </thead>
