--- a/QuanLyHocSinh/templates/Teacher/EnterPoints.html
+++ b/QuanLyHocSinh/templates/Teacher/EnterPoints.html
@@ -24,7 +24,7 @@ Nhập điểm
     <!-- Bộ lọc -->
     <form action="{{ url_for('class_filter') }}" method="POST">
         <div id="scoreboard-container">
-            <h2 class="title">BẢNG ĐIỂM MÔN HỌC</h2>
+            <h2 class="title">LỌC LỚP</h2>
             <div id="class-info">
                 <!-- Lớp -->
                 <p>
