--- a/QuanLyHocSinh/templates/Teacher/ExportTranscript.html
+++ b/QuanLyHocSinh/templates/Teacher/ExportTranscript.html
@@ -12,7 +12,7 @@ Xuất điểm
 <div class="container mt-4 container-div">
 
 <form action="{{ url_for('export_pdf') }}" method="get">
-    <button type="submit" class="btn btn-success">Xuất ra PDF</button>
+    <button type="submit" class="btn btn-success" id="export-btn">Xuất ra PDF</button>
 </form>
 
     <table id="scoreboard-table">
