--- a/QuanLyHocSinh/templates/Teacher/GenerateTranscript.html
+++ b/QuanLyHocSinh/templates/Teacher/GenerateTranscript.html
@@ -26,7 +26,7 @@ Xuất điểm
     <!-- Bộ lọc -->
     <form action="{{ url_for('generate') }}" method="POST">
         <div id="scoreboard-container">
-            <h2 class="title">BẢNG ĐIỂM MÔN HỌC</h2>
+            <h2 class="title">LỌC LỚP</h2>
             <div id="class-info">
                 <!-- Lớp -->
                 <p>
