--- a/QuanLyHocSinh/templates/Teacher/ExportTranscript.html
+++ b/QuanLyHocSinh/templates/Teacher/ExportTranscript.html
@@ -14,7 +14,7 @@ Xuất điểm
 <form action="{{ url_for('export_pdf') }}" method="get">
     <button type="submit" class="btn btn-success" id="export-btn">Xuất ra PDF</button>
 </form>
-
+<h4 class="text-center">Xuất điểm lớp <strong>{{ class_name }}</strong> Năm <strong>{{ year }}</strong></h4>
     <table id="scoreboard-table">
     <thead>
         <tr>
