--- a/QuanLyHocSinh/templates/staff/InfoUser.html
+++ b/QuanLyHocSinh/templates/staff/InfoUser.html
@@ -26,7 +26,7 @@
             {% endif %}
         {% endwith %}
         <form action="{{ url_for('info_user') }}" method="POST">
-            <div class="account-id">Tên Người Dùng: {{ username or 'Không thể giải mã' }}</div>
+            <div class="account-id">Tên Người Dùng: {{ Cuser.userName or 'Không thể giải mã' }}</div>
             <a href="{{ url_for('logout') }}" class="log_out">Đăng Xuất</a>
             <h1>Thông Tin Cá Nhân</h1>
 
